Added some extrea Content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div class="flex-row">
             <p>
                 <a href="https://devnah4.github.io/run-buddy/"><img src="./assets/images/Run-buddy-site.png" alt="Run Buddy Website" style="width:450px;height:300px;"></a>
+                <a href="https://devnah4.github.io/Movieogs/"><img src="./assets/images/movieogs.jpg" alt="Movieogs Preview" style="width:450px;height:300px;"></a>
             </p>
         </div>
     </section>
