Added budge-it to portfolio

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <p>
                 <a href="https://devnah4.github.io/run-buddy/"><img src="./assets/images/Run-buddy-site.png" alt="Run Buddy Website" style="width:450px;height:300px;"></a>
                 <a href="https://devnah4.github.io/Movieogs/"><img src="./assets/images/movieogs.jpg" alt="Movieogs Preview" style="width:450px;height:300px;"></a>
+                <a href="https://budge--it.herokuapp.com/"><img src="./assets/images/UserDashboard.png" alt="Budge-it Preview" style="width:450px;height:300px;"></a>
             </p>
         </div>
     </section>
